# zerialize

./: .gitignore  .gitmodules  CMAKEHOWTO.md  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  README.md  benchmark_zerialize.cpp
benchmark_compare/: CMakeLists.txt  README.md  benchmark_compare.cpp  reflect_cpp_impl.cpp  vcpkg.json
benchmark_compare/src/: benchmark_compare.cpp  benchmark_compare_full.cpp  benchmark_compare_new.cpp  reflect_cpp_xtensor_support.hpp
composite_example/: CMakeLists.txt  README.md  test_zerialize_composite.cpp  zerialize_composite.hpp
examples/: CMakeLists.txt  README.md  general_usage.cpp  general_use.cpp
include/: README.md
include/zerialize/: any_dispatch.hpp  api.hpp  concepts.hpp  debug_utils.hpp  deserializer.hpp  errors.hpp  serialize.hpp  serializer.hpp  swl_optional.hpp  test_zerialize.hpp  testing_utils.hpp  value_type.hpp  zbuffer.hpp  zerialize.hpp  zerialize_any.hpp  zerialize_eigen.hpp  zerialize_flex.hpp  zerialize_json.hpp  zerialize_msgpack.hpp  zerialize_msgpack_c.hpp  zerialize_msgpack_old.hpp  zerialize_tensor_utils.h  zerialize_testing_utils.hpp  zerialize_xtensor.hpp  zerialize_yyjson.hpp  zerialize_zbuffer.hpp
include/zerialize/protocols/: ZER.md  ZERA.md  flex.hpp  json.hpp  msgpack.hpp  zer.hpp
include/zerialize/tensor/: eigen.hpp  utils.hpp  xtensor.hpp
modules/: CMakeLists.txt  zerialize.cppm
modules/protocols/: cbor.cppm  flex.cppm  json.cppm  msgpack.cppm
src/: benchmark_zerialize.cpp  test_zerialize.cpp
test/: CMakeLists.txt  README.md  test_zerialize.cpp
